Fixed a crash when clicking add button on the snackbar and finished topic adding.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
         <activity android:name=".LoadActivity"></activity>
         <activity android:name=".ViewSessionActivity" />
         <activity android:name=".VoteActivity"></activity>
+        <activity android:name=".TopicActivity"></activity>
+        <activity android:name=".SprintActivity"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
