Fixes the bug hiding the Topic text input on the add Topic dialogue in TopicActivity.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.threeguys.scrummy">
 
     <application
@@ -8,12 +9,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".LoadActivity"></activity>
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".LoadActivity"/>
         <activity android:name=".ViewSessionActivity" />
-        <activity android:name=".VoteActivity"></activity>
-        <activity android:name=".TopicActivity"></activity>
-        <activity android:name=".SprintActivity"></activity>
+        <activity android:name=".VoteActivity" />
+        <activity android:name=".TopicActivity" android:windowSoftInputMode="adjustPan"/>
+        <activity android:name=".SprintActivity"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
