--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,15 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/scrummy_retro_launcher"
+        android:icon="@mipmap/ic_scrummy_retro_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/scrummy_retro_launcher"
+        android:roundIcon="@mipmap/ic_scrummy_retro_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".LoginActivity">
+        <activity android:name=".LoginActivity"
+            android:screenOrientation="portrait"
+            android:label="Sign In">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
