Fixed a bug that caused the app's name to show up as Log In instead of Scrummy Retro.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,8 +21,8 @@
             android:configChanges="keyboardHidden|orientation|screenSize" />
         <activity
             android:name=".LoginActivity"
-            android:label="Sign In"
             android:screenOrientation="portrait"
+            android:label="Scrummy Retro"
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
