Changed the Sprint Activity so that the Keyboard doesn't immediately show up on start, but rather will show when the user clicks on the textbox.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,6 +66,7 @@
         <activity
             android:name=".SprintActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
+            android:windowSoftInputMode="stateHidden"
             android:label="@string/title_activity_sprint"
             android:screenOrientation="portrait" />
         <activity
